# openmc

./: .gitignore  CMakeLists.txt  collect.py  plot.py  run.sh
cmake/Modules/: FindOptiX.cmake
cuda/: triangle_mesh.cu
examples/python/boxes/: build-xml.py
examples/xml/pincell/: cross_sections.xml
experiments/: vtk-to-stl.py
experiments/3k-tri-cube/dagmc/: plots.xml  settings.xml
experiments/boxes/dagmc/: dagmc.h5m  settings.xml
experiments/boxes/native/: geometry.xml  materials.xml  plots.xml  settings.xml
experiments/buddha/dagmc/: settings.xml  tallies.xml
experiments/buddha/optix/: materials.xml  settings.xml
experiments/bunny/dagmc/: dagmc.h5m  dagmc_zip.h5m  settings.xml
experiments/bunny/optix/: geometry.mtl  materials.xml
experiments/cube/: cube.blend  cube.blend1  cube.trelis
experiments/cube/dagmc/: cube.stl  dagmc.h5m  settings.xml
experiments/cube/native/: build-xml.py  geometry.xml  plots.xml  settings.xml
experiments/cube/optix/: geometry.mtl  geometry.xml  plots.xml  settings.xml
experiments/dragon/optix/: plots.xml  settings.xml
experiments/pwr_core/native/: build-xml.py  materials.xml  plots.xml  settings.xml
experiments/sphere/dagmc/: dagmc.h5m
experiments/sphere/native/: build-xml.py  settings.xml
experiments/sphere/optix/: geometry.xml
experiments/tetrahedron/: tetrahedron.trelis
experiments/tetrahedron/dagmc/: dagmc.h5m  settings.xml
experiments/tetrahedron/native/: plots.xml  settings.xml
experiments/tetrahedron/optix/: settings.xml
include/openmc/: angle_energy.h  cell.h  distribution.h  distribution_angle.h  distribution_energy.h  distribution_multi.h  distribution_spatial.h  endf.h  geometry.h  material.h  nuclide.h  particle.h  position.h  reaction.h  reaction_product.h  secondary_kalbach.h  secondary_uncorrelated.h  settings.h  simulation.h  source.h  surface.h
include/openmc/optix/: optix_cell.h  optix_data.h  optix_geometry.h  optix_mesh.h  optix_renderer.h  optix_surface.h  tetrahedron.h  utils.h
scripts/: openmc-plot-mesh-tally
src/: cell.cpp  dagmc.cpp  eigenvalue.cpp  geometry.cpp  geometry_aux.cpp  initialize.cpp  nuclide.cpp  particle.cpp  physics.cpp  position.cpp  settings.cpp  simulation.cpp  source.cpp
src/optix/: accum_camera.cu  basic.cu  cell.cu  contains.cu  distribution.cu  distribution_angle.cu  distribution_energy.cu  distribution_multi.cu  distribution_spatial.cu  endf.cu  geometry.cu  material.cu  math_functions.cu  mesh.cu  nuclide.cu  optixGeometryTriangles.cu  optix_cell.cpp  optix_data.cpp  optix_geometry.cpp  optix_mesh.cpp  optix_renderer.cpp  optix_surface.cpp  particle.cu  physics.cu  random_lcg.cu  reaction_product.cu  secondary_kalbach.cu  secondary_uncorrelated.cu  simulation.cu  source.cu  surface.cu  variables.cu
src/optix/render/: normal_shader.cu
sutil/: CMakeLists.txt  Mesh.cpp  Mesh.h  OptiXMesh.cpp  OptiXMesh.h
sutil/tinyobjloader/: tiny_obj_loader.h
sutil/tinyobjloader-1.0.0/: tiny_obj_loader.cc  tiny_obj_loader.h
